[DRAFT][shader] adopt gaussian filter
Change the filter of 1st pass to Gauss in order to reduce FPS drop.

Config `Radius` is now `Strength`.
New config value `Quality` is available: 1 - 8, default 6

* update `config.BlurConfig`
  - new consts: `int MAX_STRENGTH`, `int MAX_QUALITY`
  - new field: `int quality`
  - change field: `radius` -> `strength`

* update `Blur`
  - some new consts for uniforms
  - new field: `int currentDist`
  - change const: `blurProgress` -> `BLUR_STRENGTH`
  - some helper methods
  - add JavaDoc

* update shader asset `blur:fade_in_blur`
  - `Progress`, `Radius` -> combined into `Strength`

* separate shader programs:
  - `gauss_filter_k31`: 1st pass
  - `smooth_filter`: 2nd pass (with huge iterations!)

* add uniforms in `gauss_filter_k31`:
  - `mat4 Kernel`

* add uniforms in `smooth_filter`:
  - `int EffectMax`: max texels to apply effect
  - `int DeltaEnd`: end threshold of Strength

* update lang asset `en_us.json`
  - change key: `blur.midnightconfig.radius` -> `.strength`
  - new values: `blur.midnightconfig.quality`,
  `blur.midnightconfig.quality.tooltip`

--- a/src/main/resources/assets/blur/lang/en_us.json
+++ b/src/main/resources/assets/blur/lang/en_us.json
@@ -6,7 +6,9 @@
   "blur.midnightconfig.fadeTimeMillis": "Fade Time (in milliseconds)",
   "blur.midnightconfig.fadeOutTimeMillis": "Fade Out Time (in milliseconds)",
   "blur.midnightconfig.ease": "Ease Animation",
-  "blur.midnightconfig.radius": "Radius",
+  "blur.midnightconfig.strength": "Strength",
+  "blur.midnightconfig.quality": "Quality",
+  "blur.midnightconfig.quality.tooltip": "Higher requires more GPU power.",
   "blur.midnightconfig.gradientStart": "Gradient Start Color",
   "blur.midnightconfig.gradientEnd": "Gradient End Color",
   "blur.midnightconfig.gradientStartAlpha": "Gradient Start Alpha",
